--- a/src/css/style.css
+++ b/src/css/style.css
@@ -11,7 +11,7 @@
 @import url("./sections/subscribe.css");
 @import url("./sections/footer.css");
 
-/* variables for reusability across all files (including above imported) */
+/* variables */
 :root {
   --playfair-display: "Playfair Display", serif;
   --plus-jakarta-sans: "Plus Jakarta Sans", sans-serif;
@@ -105,14 +105,23 @@ a {
   scrollbar-width: none; /* Firefox */
 }
 
-/* START: about us media queries */
-/* @media screen and (max-width: 1024px) {
+/* MEDIA QUERIES */
+
+/* About-us */
+@media screen and (max-width: 475px) {
+  .about-us__content h3 {
+    font-size: 56px;
+  }
+}
+
+@media screen and (max-width: 1024px) {
   .about-us {
     flex-direction: column;
   }
 
   .about-us__image {
     flex-direction: row;
+    border-top: 8px solid var(--color-creamson);
   }
 
   .about-us__image-sushi3 {
@@ -161,11 +170,10 @@ a {
   .about-us__content {
     padding: 32px;
   }
-} */
-/* END: about us media queries */
+}
 
-/* START: header media queries */
-/* @media screen and (max-width: 900px) {
+/* Header */
+@media screen and (max-width: 1060px) {
   .header__nav {
     background: var(--primary-color);
   }
@@ -183,11 +191,10 @@ a {
   .header__logo {
     padding-left: 0;
   }
-} */
-/* END: header media queries */
+}
 
-/* START: hero media queries */
-/* @media screen and (max-width: 1060px) {
+/* Hero */
+@media screen and (max-width: 1060px) {
   .hero {
     flex-direction: column;
   }
@@ -231,11 +238,10 @@ a {
   .hero-content__testimonial {
     padding: 32px;
   }
-} */
-/* END: hero media queries */
+}
 
-/* START: popular media queries */
-/* @media screen and (max-width: 550px) {
+/* Popular Foods */
+@media screen and (max-width: 550px) {
   .popular-foods {
     padding: 64px 32px;
   }
@@ -244,11 +250,10 @@ a {
   .popular-foods__card.active-card {
     min-width: 100%;
   }
-} */
-/* END: popular media queries */
+}
 
-/* START: subscribe media queries */
-/* @media screen and (max-width: 550px) {
+/* Subscription */
+@media screen and (max-width: 550px) {
   .subscription {
     padding: 64px 32px;
   }
@@ -280,11 +285,10 @@ a {
   .subscription__form button {
     min-width: 100%;
   }
-} */
-/* END: subscribe media queries */
+}
 
-/* START: trending media queries */
-/* @media screen and (max-width: 1024px) {
+/* Trending */
+@media screen and (max-width: 1024px) {
   .trending-sushi {
     flex-direction: column;
   }
@@ -316,5 +320,77 @@ a {
   .trending__content {
     padding: 32px;
   }
-} */
-/* END: trending media queries */
+}
+
+/* Footer */
+
+@media screen and (max-width: 900px) {
+  .footer {
+    gap: 10px;
+  }
+
+  .footer ul {
+    gap: 15px;
+  }
+
+  .footer ul:last-child {
+    gap: 10px;
+  }
+
+  .footer__nav li {
+    font-size: 15px;
+  }
+
+  .footer__social li {
+    width: 35px;
+    height: 35px;
+  }
+}
+
+@media screen and (max-width: 650px) {
+  .footer {
+    flex-direction: column;
+    gap: 16px;
+  }
+
+  .footer ul {
+    gap: 24px;
+  }
+
+  .footer ul:last-child {
+    gap: 20px;
+  }
+
+  .footer__social li {
+    width: 35px;
+    height: 35px;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .footer {
+    flex-direction: column;
+    gap: 16px;
+  }
+
+  .footer__logo {
+    font-size: 20px;
+  }
+
+  .footer ul {
+    gap: 16px;
+  }
+
+  .footer ul:last-child {
+    gap: 12px;
+  }
+
+  .footer__nav li {
+    font-size: 15px;
+  }
+
+  .footer__social li {
+    width: 35px;
+    height: 35px;
+  }
+}
